--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.1",
     "react-icons": "^4.6.0",
+    "react-photo-view": "^1.2.2",
     "react-router-dom": "^6.4.3",
     "readme-md-generator": "^1.0.0"
   },
@@ -22,6 +23,9 @@
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "@vitejs/plugin-react": "^2.2.0",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.2",
     "vite": "^3.2.3"
   }
 }
