--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^4.6.0",
     "react-photo-view": "^1.2.2",
     "react-router-dom": "^6.4.3",
+    "react-toastify": "^9.1.1",
     "readme-md-generator": "^1.0.0"
   },
   "devDependencies": {
